7.Loadbalaners/2.Advanced_LoadBalancers/google-cloud-advanced-networking-load-balancing/02/demos/spikeysales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spikeysales-service 
  annotations:
    cloud.google.com/neg: '{"ingress": true}' 
spec: 
  selector:
    run: spikeysales-app 
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 9376
