7.Loadbalaners/2.Advanced_LoadBalancers/google-cloud-advanced-networking-load-balancing/02/demos/spikeysales-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spikeysales-ing
spec:
  backend:
    serviceName: spikeysales-service 
    servicePort: 80
